# CPP

./: Makefile  P0783-SimplifyingStdFutureContinuations.html  P1232_integrating_executors_with_the_standard_library.md  README.md  SimplifyingStdFutureContinuations.html  convert_bikeshed.sh  executor_compromise_the_return.md  future_continuation.bs  in_support_of_coroutines.md  integrating_executors_with_the_standard_library.md  p1053R0_future_proofing_continuations.html  p1053R1_future_proofing_continuations.html  p1053_future_proofing_continuations.bs  p1232_integrating_executors_with_the_standard_library.md  p1241_in_support_of_coroutines.md  p1897R0_initial_executor_algorithms_for_cpp23.html  p1897R1_initial_executor_algorithms_for_cpp23.html  p1897R2_initial_executor_algorithms_for_cpp23.html  p1897R3_initial_executor_algorithms_for_cpp23.html  p1898R0_forward_progress_delegation.html  p1898R1_forward_progress_delegation.html  p2079R2_system_execution_context.html  p2079R3_system_execution_context.html  p2079r2_system_execution_context.html  p2209R0_bulk_schedule.html  pxxx_global_execution_context.html  specifying_bulk.md
Futures/: CMakeLists.txt
Futures/src/: AsyncAwait.h  AsyncAwaitTest.cpp  Executor.h  ExecutorCoroutine.cpp  ExecutorTest.cpp  Future.cpp  Future.h  FutureTest.cpp  MyAsyncLibrary.cpp  MyAsyncLibrary.h  SimpleAwaitable.h  SimpleCoroutine.cpp  SimpleTest.cpp
bikeshed_sources/: bikeshed_test.bs
continuation_experiments/: Makefile  bulk_driver.cpp  bulk_driver_in_promise.cpp  cleaner_bulk_model.cpp  direct_bulk.cpp
paper_framework/: index.yaml
paper_framework_sources/: .gitignore  p1897_initial_executor_algorithms_for_cpp23.md  p1898_forward_progress_delegation.md  p2079_global_execution_context.md  p2079_system_execution_context.bs  p2079_system_execution_context.md  p2203_bulk_schedule.md  p2209_bulk_schedule.md  p2522_global_execution_context.md  parallel_backend.puml  pxxx_global_execution_context.md  pxxx_initial_executor_algorithms_for_cpp23.md  pxxxx_forward_progress_delegation.md
(+3 files in other folders)
